# Blake3.NET

./: .gitignore  AGENTS.md  changelog.md  license.txt  readme.md
.github/workflows/: managed.yml  native.yml
doc/: benchmarks.md
lib/blake3_dotnet/: Cargo.toml  build-linux-arm.sh  build-linux-arm64.sh  build-linux-musl-arm64.sh  build-linux-musl-x64.sh  build-linux-x64.sh  build-osx-arm64.sh  build-osx-x64.sh  build-win-arm.ps1  build-win-arm64.ps1  build-win-x64.ps1  build-win-x86.ps1  readme.md
lib/blake3_dotnet/.cargo/: config.toml
lib/blake3_dotnet/src/: lib.rs
src/: Blake3.NET.sln  Blake3.NET.sln.DotSettings  Blake3.NET.slnx  Directory.Packages.props  dotnet-releaser.toml
src/Blake3/: Blake3.csproj  Blake3.props  Blake3Extensions.cs  Blake3HashAlgorithm.cs  Blake3ManagedCore.Arm64.cs  Blake3ManagedCore.Avx2.cs  Blake3ManagedCore.Avx512.cs  Blake3ManagedCore.PortableSimd.cs  Blake3ManagedCore.Scalar.cs  Blake3ManagedCore.X86.cs  (+7 more)
src/Blake3.Benchmarks/: Blake3.Benchmarks.csproj  Blake3BenchmarkBase.cs  Blake3ParallelBenchmarks.cs  Blake3VsNativeBenchmarks.cs  ExternalHashBenchmarks.cs  Program.cs
src/Blake3.Managed/: Blake3.Managed.csproj  Blake3ManagedCore.Arm64.cs  Blake3ManagedCore.Avx2.cs  Blake3ManagedCore.cs  Hasher.cs
src/Blake3.Native/: Blake3.Native.csproj  Hasher.cs
src/Blake3.Sharp/: Blake3.Sharp.csproj  Blake3ManagedCore.Arm64.cs
src/Blake3.Tests/: Blake3.Tests.csproj  Blake3HashAlgorithmTests.cs  Blake3StreamTests.cs  Blake3TestsBase.cs  HashTests.cs  Hasher2Tests.cs  HasherTests.cs  ManagedHasherTests.cs  ManagedPackageTests.cs
(+2 files in other folders)
