[package]
name = "blake3_dotnet"
version = "0.3.0"
authors = ["Alexandre Mutel <alexandre_mutel@live.com>"]
edition = "2018"

[dependencies]
blake3 = "1.4.1"
libc = "0.2.147"

[profile.release]
lto = true

[features]
default = ["rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[lib]
name = "blake3_dotnet"
crate-type = ["cdylib"]